# hpc-datastore-python-via-pybind

./: .gitmodules  CMakeLists.txt  README.md  all_build.sh  all_build_win.sh  install.py  vcpkg.json
all_build/: all_build.sh  get_condas_env.bat
binaries/win32/: hpc_datastore.cp310-win_amd64.pyd  hpc_datastore.cp36-win_amd64.pyd  hpc_datastore.cp37-win_amd64.pyd  hpc_datastore.cp38-win_amd64.pyd  hpc_datastore.cp39-win_amd64.pyd
binaries/windows/: hpc_datastore.cp310-win_amd64.pyd  hpc_datastore.cp36-win_amd64.pyd  hpc_datastore.cp37-win_amd64.pyd  hpc_datastore.cp38-win_amd64.pyd  hpc_datastore.cp39-win_amd64.pyd  hpc_datastore.pyd
examples/: read_write_chunks.py
src/: custom_casters.hpp  main.cpp  wrappers.hpp
